--- a/assets/themes/wayne/css/style.css
+++ b/assets/themes/wayne/css/style.css
@@ -4,17 +4,33 @@
   font-weight: 400;
   src: local('Overlock'), local('Overlock-Regular'), url(../font/Overlock.woff) format('woff');
 }
+
 @font-face {
   font-family: 'Coda';
   font-style: normal;
   font-weight: 400;
   src: local('Coda'), local('Coda-Regular'), url(../font/Coda.woff) format('woff');
 }
-.clearfix:after { content: ".";display: block;height: 0;clear: both;visibility: hidden;}
-.clearfix {display: inline-block;}
+
+.clearfix:after {
+  content: ".";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
+
+.clearfix {
+  display: inline-block;
+}
 /* Hides from IE-mac \*/
-* html .clearfix {height: 1%;}
-.clearfix {display: block;}
+* html .clearfix {
+  height: 1%;
+}
+
+.clearfix {
+  display: block;
+}
 /* End hide from IE-mac */
 /*------------------------------------
 * sext-v
@@ -27,66 +43,88 @@
 * |\.|._)._)
 * --------------------------------- */
 a {
-  color: #3399cc; }
-  a:hover {
-    color: #55bbee; }
+  color: #3399cc;
+}
+
+a:hover {
+  color: #55bbee;
+}
 
 * {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 body {
   font-size: 14px;
   font-family: "Overlock", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
   color: #555555;
-  background-image: url("../images/bg.png"); }
+  background-image: url("../images/bg.png");
+}
 
 a {
   text-decoration: none;
   -webkit-transition: color 0.2s linear;
   -moz-transition: color 0.2s linear;
-  transition: color 0.2s linear; }
+  transition: color 0.2s linear;
+}
 
 li {
-  padding: 0.2em 0; }
+  padding: 0.2em 0;
+}
 
 ol, ul {
-  list-style-position: inside; }
+  list-style-position: inside;
+}
 
 #main {
-  margin: 2em 0 1em 0; }
+  margin: 2em 0 1em 0;
+}
 
 #header {
   width: 680px;
   margin: 0 auto;
   /*margin: 5em auto 4em auto;*/
   text-align: center;
-  text-align: left; }
-  #header a {
-    color: #999999;
-    text-shadow: #e9e9e9 2px 2px 2px; }
-    #header a:hover {
-      color: #333333; }
-  #header h1 {
-    display: block;
-    float:left;
-    font-family: "Coda", "Hiragino Sans GB", "Microsoft YaHei", sans-serif; }
+  text-align: left;
+}
+
+#header a {
+  color: #999999;
+  text-shadow: #e9e9e9 2px 2px 2px;
+}
+
+#header a:hover {
+  color: #333333;
+}
+
+#header h1 {
+  display: block;
+  float: left;
+  font-family: "Coda", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
+}
 
 div.floatnav {
-  float:left;
+  float: left;
   margin: 2px 0 0 80px;
   padding: 1px 0;
 }
+
 div.floatnav span {
   line-height: 40px;
-  margin: 1em 1em 0em 0; }
+  margin: 1em 1em 0em 0;
+}
+
 div.floatnav a {
   font-family: "Coda", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
   font-size: 1.25em;
   text-transform: uppercase;
-  color: #afafaf; }
+  color: #afafaf;
+}
+
 div.floatnav a:hover {
-  color: #333333; }
+  color: #333333;
+}
 
 div.fixnav {
   width: 20px;
@@ -95,130 +133,194 @@ div.fixnav {
   text-align: right;
   position: fixed;
   top: 1em;
-  right: 2em; }
+  right: 2em;
+}
+
 div.fixnav span {
   display: block;
-  margin: 1em 0; }
+  margin: 1em 0;
+}
+
 div.fixnav a {
   /*font-family: "Coda", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;*/
   font-size: 1.25em;
   text-transform: uppercase;
-  color: #afafaf; }
+  color: #afafaf;
+}
+
 div.fixnav a:hover {
-  color: #333333; }
+  color: #333333;
+}
 
 #content {
   width: 680px;
   margin: 0 auto;
   font-size: 1.1em;
-  line-height: 1.7em; }
-  #content .article {
-    padding: 1.25em 24px;
-    background-color: #ffffff;
-    border: 1px solid #e0e0e0;
-    margin: 2em 0;
-    border-radius: 5px; }
-  #content a {
-    color: #3399cc; }
-    #content a:hover {
-      color: #55bbee; }
-  #content .post img {
-    max-width: 630px;
-    display: block;
-    box-shadow: #999999 0px 8px 4px -4px;
-    margin: 0.5em auto; }
-  #content .post .image-700 {
-    margin-left: -28px;
-    margin-right: -28px;
-    display: block; }
-  #content .post .image-800 {
-    margin-left: -28px;
-    margin-right: -28px;
-    display: block; }
-  #content .post .image-900 {
-    margin-left: -28px;
-    margin-right: -28px;
-    display: block; }
-  #content .post .image-1000 {
-    margin-left: -28px;
-    margin-right: -28px;
-    display: block; }
-  #content .post .image-1100 {
-    margin-left: -28px;
-    margin-right: -28px;
-    display: block; }
-  #content .post .image-1200 {
-    margin-left: -28px;
-    margin-right: -28px;
-    display: block; }
-  #content .post .image-1300 {
-    margin-left: -28px;
-    margin-right: -28px;
-    display: block; }
-  #content .post .image-1400 {
-    margin-left: -28px;
-    margin-right: -28px;
-    display: block; }
-  #content p {
-    padding: 0.7em 0; }
-  #content pre code {
-    margin: 1em -25px 1em -25px;
-    padding-left: 25px;
-    padding-right: 25px;
-    border-color: #e0e0e0 !important;
-    font-size: 13px;
-    font-family: Menlo, monospace;
-    line-height: 1.6;
-    display: block;
-    overflow: auto; }
-  #content blockquote {
-    display: block;
-    text-align: justify;
-    border-left: 4px solid #eeeeee;
-    margin: 1em 0em;
-    padding-left: 1.5em; }
-    #content blockquote p {
-      margin: 0;
-      padding: 0; }
-  #content li.listing-item, #content li.listing-seperator {
-    list-style-type: none;
-    padding: 0; }
-    #content li.listing-item a, #content li.listing-seperator a {
-      padding: 0.2em 1em; }
-    #content li.listing-item time, #content li.listing-seperator time {
-      color: #999999; }
-  #content li.listing-seperator {
-    font-weight: bold; }
-  #content .meta {
-    color: #c0c0c0;
-    margin: 0.25em 0 1em; }
-    #content .meta .tags a {
-      color: #c0c0c0;
-      padding: .25em; }
-      #content .meta .tags a:hover {
-        color: #999999; }
-  #content #page_nav {
-    text-align: center;
-    margin: 2em 0; }
-    #content #page_nav a {
-      font-family: "Coda", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
-      font-size: .8em;
-      padding: 0.25em 1em;
-      color: #a0a0a0;
-      background-color: #e0e0e0;
-      margin: 0 1em;
-      text-transform: uppercase; }
-    #content #page_nav a:hover {
-      background-color: #e6e6e6; }
+  line-height: 1.7em;
+}
+
+#content .article {
+  padding: 1.25em 24px;
+  background-color: #ffffff;
+  border: 1px solid #e0e0e0;
+  margin: 2em 0;
+  border-radius: 5px;
+}
+
+#content a {
+  color: #3399cc;
+}
+
+#content a:hover {
+  color: #55bbee;
+}
+
+#content .post img {
+  max-width: 630px;
+  display: block;
+  box-shadow: #999999 0px 8px 4px -4px;
+  margin: 0.5em auto;
+}
+
+#content .post .image-700 {
+  margin-left: -28px;
+  margin-right: -28px;
+  display: block;
+}
+
+#content .post .image-800 {
+  margin-left: -28px;
+  margin-right: -28px;
+  display: block;
+}
+
+#content .post .image-900 {
+  margin-left: -28px;
+  margin-right: -28px;
+  display: block;
+}
+
+#content .post .image-1000 {
+  margin-left: -28px;
+  margin-right: -28px;
+  display: block;
+}
+
+#content .post .image-1100 {
+  margin-left: -28px;
+  margin-right: -28px;
+  display: block;
+}
+
+#content .post .image-1200 {
+  margin-left: -28px;
+  margin-right: -28px;
+  display: block;
+}
+
+#content .post .image-1300 {
+  margin-left: -28px;
+  margin-right: -28px;
+  display: block;
+}
+
+#content .post .image-1400 {
+  margin-left: -28px;
+  margin-right: -28px;
+  display: block;
+}
+
+#content p {
+  padding: 0.7em 0;
+}
+
+#content pre code {
+  margin: 1em -25px 1em -25px;
+  padding-left: 25px;
+  padding-right: 25px;
+  border-color: #e0e0e0 !important;
+  font-size: 13px;
+  font-family: Menlo, monospace;
+  line-height: 1.6;
+  display: block;
+  overflow: auto;
+}
+
+#content blockquote {
+  display: block;
+  text-align: justify;
+  border-left: 4px solid #eeeeee;
+  margin: 1em 0em;
+  padding-left: 1.5em;
+}
+
+#content blockquote p {
+  margin: 0;
+  padding: 0;
+}
+
+#content li.listing-item, #content li.listing-seperator {
+  list-style-type: none;
+  padding: 0;
+}
+
+#content li.listing-item a, #content li.listing-seperator a {
+  padding: 0.2em 1em;
+}
+
+#content li.listing-item time, #content li.listing-seperator time {
+  color: #999999;
+}
+
+#content li.listing-seperator {
+  font-weight: bold;
+}
+
+#content .meta {
+  color: #c0c0c0;
+  margin: 0.25em 0 1em;
+}
+
+#content .meta .tags a {
+  color: #c0c0c0;
+  padding: .25em;
+}
+
+#content .meta .tags a:hover {
+  color: #999999;
+}
+
+#content #page_nav {
+  text-align: center;
+  margin: 2em 0;
+}
+
+#content #page_nav a {
+  font-family: "Coda", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
+  font-size: .8em;
+  padding: 0.25em 1em;
+  color: #a0a0a0;
+  background-color: #e0e0e0;
+  margin: 0 1em;
+  text-transform: uppercase;
+}
+
+#content #page_nav a:hover {
+  background-color: #e6e6e6;
+}
 
 .comment {
-  margin-top: 2em; }
+  margin-top: 2em;
+}
 
 .circle-wrapper {
   margin: 2em 0;
-  display: block; }
-  .circle-wrapper:hover .circle {
-    background-color: #333333; }
+  display: block;
+}
+
+.circle-wrapper:hover .circle {
+  background-color: #333333;
+}
 
 .circle {
   display: inline-block;
@@ -230,15 +332,18 @@ div.fixnav a:hover {
   -webkit-border-radius: 0.4em;
   -webkit-transition: background-color 0.2s linear;
   -moz-transition: background-color 0.2s linear;
-  border-radius: 0.4em; }
+  border-radius: 0.4em;
+}
 
 .center {
-  text-align: center; }
+  text-align: center;
+}
 
 hr {
   margin: 0.7em 0;
   border-top: 1px dashed #d0d0d0;
-  border-bottom: 1px dashed #f9f9f9; }
+  border-bottom: 1px dashed #f9f9f9;
+}
 
 #footer {
   width: 680px;
@@ -247,76 +352,162 @@ hr {
   font-family: "Balthazar";
   font-size: .9em;
   text-align: center;
-  color: #909090; }
-  #footer a {
-    color: #cccccc; }
-    #footer a:hover {
-      color: #999999; }
+  color: #909090;
+}
+
+#footer a {
+  color: #cccccc;
+}
+
+#footer a:hover {
+  color: #999999;
+}
 
 #tag_cloud {
-  margin-bottom: 1em; }
-  #tag_cloud a:hover {
-    color: red !important;
-    text-decoration: none; }
+  margin-bottom: 1em;
+}
+
+#tag_cloud a:hover {
+  color: red !important;
+  text-decoration: none;
+}
 
 li[id*='dsq-like-'] {
-  display: none; }
+  display: none;
+}
 
 #dsq-global-toolbar, #dsq-like-tooltip, #dsq-sort-by, .dsq-comment-moderate {
-  display: none; }
+  display: none;
+}
 
 .dsq-comment-header {
   border: none !important;
-  background: none !important; }
+  background: none !important;
+}
 
 #disqus_thread h3 {
   font-size: 1em !important;
   font-weight: normal !important;
-  margin: 0 !important; }
+  margin: 0 !important;
+}
 
 #dsq-footer {
-  display: none; }
+  display: none;
+}
 
 .gist {
   font-size: 13px;
-  line-height: 1.6; }
+  line-height: 1.6;
+}
 
-#updown{
-  width:50px;
+#updown {
+  width: 50px;
   position: fixed;
-  top:50%;
+  top: 50%;
   left: 50%;
   margin-left: -400px;
   margin-top: -30px;
 }
-#updown span{
-  margin:-5px 0;
+
+#updown span {
+  margin: -5px 0;
   display: block;
-  width:32px; 
+  width: 32px;
   cursor: pointer;
 }
-#updown span a{
+
+#updown span a {
   font-size: 50px;
-  color:#afafaf;
+  color: #afafaf;
 }
-#updown span a:hover{
-  color:#333;
+
+#updown span a:hover {
+  color: #333;
 }
-#updown span #reply{
+
+#updown span #reply {
   font-size: 28px;
 }
 
 /*slimbox*/
-#lbOverlay{position:fixed;z-index:999;left:0;top:0;width:100%;height:100%;background-color:#000;cursor:pointer}
-#lbCenter,#lbBottomContainer{position:absolute;z-index:9999;overflow:hidden;background-color:#fff}
-.lbLoading{background:#fff url(../images/loading.gif) no-repeat center}
-#lbImage{position:absolute;left:0;top:0;border:10px solid #fff;background-repeat:no-repeat}
-#lbPrevLink,#lbNextLink{display:block;position:absolute;top:0;width:50%;outline:none}
-#lbPrevLink{left:0}
-#lbPrevLink:hover{background:transparent url(../images/prevlabel.gif) no-repeat 0 15%}
-#lbNextLink{right:0}
-#lbNextLink:hover{background:transparent url(../images/nextlabel.gif) no-repeat 100% 15%}
-#lbBottom{font-family:Verdana, Arial, Geneva, Helvetica, sans-serif;font-size:10px;color:#666;line-height:1.4em;text-align:left;border:10px solid #fff;border-top-style:none}
-#lbCloseLink{display:block;float:right;width:66px;height:22px;background:transparent url(../images/closelabel.gif) no-repeat center;margin:5px 0;outline:none}
-#lbCaption,#lbNumber{margin-right:71px}
-#lbCaption{font-weight:700}
+#lbOverlay {
+  position: fixed;
+  z-index: 999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  cursor: pointer
+}
+
+#lbCenter,#lbBottomContainer {
+  position: absolute;
+  z-index: 9999;
+  overflow: hidden;
+  background-color: #fff
+}
+
+.lbLoading {
+  background: #fff url(../images/loading.gif) no-repeat center
+}
+
+#lbImage {
+  position: absolute;
+  left: 0;
+  top: 0;
+  border: 10px solid #fff;
+  background-repeat: no-repeat
+}
+
+#lbPrevLink,#lbNextLink {
+  display: block;
+  position: absolute;
+  top: 0;
+  width: 50%;
+  outline: none
+}
+
+#lbPrevLink {
+  left: 0
+}
+
+#lbPrevLink:hover {
+  background: transparent url(../images/prevlabel.gif) no-repeat 0 15%
+}
+
+#lbNextLink {
+  right: 0
+}
+
+#lbNextLink:hover {
+  background: transparent url(../images/nextlabel.gif) no-repeat 100% 15%
+}
+
+#lbBottom {
+  font-family: Verdana, Arial, Geneva, Helvetica, sans-serif;
+  font-size: 10px;
+  color: #666;
+  line-height: 1.4em;
+  text-align: left;
+  border: 10px solid #fff;
+  border-top-style: none
+}
+
+#lbCloseLink {
+  display: block;
+  float: right;
+  width: 66px;
+  height: 22px;
+  background: transparent url(../images/closelabel.gif) no-repeat center;
+  margin: 5px 0;
+  outline: none
+}
+
+#lbCaption,#lbNumber {
+  margin-right: 71px
+}
+
+#lbCaption {
+  font-weight: 700
+}
